logs/wshubsapi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/inflection-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ws4py'...
Listing './lib/python3.5/site-packages/ws4py/client'...
Listing './lib/python3.5/site-packages/ws4py/server'...
Listing './lib/python3.5/site-packages/ws4py-0.4.3.egg-info'...
Listing './lib/python3.5/site-packages/wshubsapi'...
Listing './lib/python3.5/site-packages/wshubsapi/client_file_generator'...
Listing './lib/python3.5/site-packages/wshubsapi/client_file_generator/JavaExtraFiles'...
Listing './lib/python3.5/site-packages/wshubsapi/connection_handlers'...
Listing './lib/python3.5/site-packages/wshubsapi/examples'...
Listing './lib/python3.5/site-packages/wshubsapi/examples/Clients'...
Listing './lib/python3.5/site-packages/wshubsapi/examples/Clients/_static'...
Listing './lib/python3.5/site-packages/wshubsapi/examples/Servers'...
Listing './lib/python3.5/site-packages/wshubsapi/test'...
Listing './lib/python3.5/site-packages/wshubsapi/test/integration'...
Listing './lib/python3.5/site-packages/wshubsapi/test/integration/resources'...
Listing './lib/python3.5/site-packages/wshubsapi/test/integration/resources/clients_api'...
Listing './lib/python3.5/site-packages/wshubsapi/test/integration/resources/hubs'...
Listing './lib/python3.5/site-packages/wshubsapi/test/resources'...
Listing './lib/python3.5/site-packages/wshubsapi/test/resources/hubs_inspector'...
Listing './lib/python3.5/site-packages/wshubsapi/test/resources/hubs_inspector/in_path'...
Listing './lib/python3.5/site-packages/wshubsapi/test/resources/hubs_inspector/multiple_module'...
Listing './lib/python3.5/site-packages/wshubsapi/test/resources/hubs_inspector/one_module'...
Listing './lib/python3.5/site-packages/wshubsapi/test/unit'...
Listing './lib/python3.5/site-packages/wshubsapi/test/unit/connection_handlers'...
Listing './lib/python3.5/site-packages/wshubsapi/test/utils'...
Listing './lib/python3.5/site-packages/wshubsapi-0.9.5.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
